Fix width for uneven images in carousel

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -131,6 +131,7 @@
 .product-slider-item img, .recipe-slider-item img {
   aspect-ratio: 1;
   object-fit: cover;
+  width: 100%;
 }
 
 .carousel-header h3 {
